--- a/templates/post.html
+++ b/templates/post.html
@@ -30,7 +30,10 @@
                     </div>
                     <div class="modal-footer">
                     <button type="button" class="btn btn-success" data-dismiss="modal">No</button>
-                    <button type="button" class="btn btn-danger">Yes</button>
+                    <form action="{{url_for('delete_post',post_id=post.id)}}" method="POST">
+                        <button type="submit" class="btn btn-danger">Yes</button>
+                    </form>
+                    
                     </div>
                 </div>
                 </div>
